# VulkanPy

./: .pdm-python  CHANGES.md  CHANGESUPDATE.md  DEPENDENCIES  LIGHTING.md  PROJECTNOTES.md  PROJECT_README.md  README.md  REDUNDANCIES.md  REFACTOR.md  RESOURCES.md  SYSTEM.md  TODO.todo  pubspec.yaml  pyproject.toml  server.go  treedir.md
Flutter_App/: server.go
lib/: api_service.dart  home_screen.dart  message.dart
src/maths/: matrices.py  quaternions.py  ray_triangle_intersection.py  vectors.py
terminal_utils/: client.py  config.py  server.py
validation/: config.py  error_codes.py  exceptions.py
validation/utils/: __init__.py
validation/validators/: command.py  descriptor.py  shader.py
vulkan_app/: config.yaml  main.py
vulkan_app/shaders/: compute.comp  compute.spv  frag.spv  shader.frag  shader.vert  vert.spv
vulkan_app/src/: application.py  config.py  input_handler.py  mesh_renderer.py  object_loader.py  project_overview.md  shader_manager.py  vertex.py  vulkan_renderer.py  window_manager.py
vulkan_app/src/ecs/: components.py  systems.py  world.py
vulkan_app/src/maths/: matrices.py
vulkan_app/src/resource_manager/: buffer_manager.py  image_types.py  memory_allocator.py  memory_manager.py  resource_manager.py  specialized_images.py  vulkan_resources.py
vulkan_app/src/utils/: debug_utils.py  logging_config.py
vulkan_app/src/vulkan_engine/: __init__.py  buffer.py  command_buffer.py  command_pool.py  descriptors.py  device.py  instance.py  pipeline.py  resource_manager.py  shader_module.py  (+4 more)
vulkan_app/validation/: error_handlers.py
(+21 files in other folders)
