[project]
name = "vulkan_app"
version = "0.1.0"
description = "A basic Vulkan application in Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "glfw",
    "pyglm",
    "vulkan",
    "numpy",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
