[project]
name = "vulkan_app"
version = "0.1.0"
description = "A basic Vulkan application in Python"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "glfw>=2.8.0",
    "pyglm",
    "vulkan",
    "numpy==2.2.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
